# duckdb-rl

./: .gitignore  CMakeLists.txt  README.md  imdb_constants.hpp  main.cpp  timer.cpp  timer.hpp
imdb/: aka_name.csv  aka_title.csv  cast_info.csv  char_name.csv  company_name.csv  company_type.csv  complete_cast.csv  info_type.csv  keyword.csv  kind_type.csv  link_type.csv  load.sql  movie_companies.csv  movie_info.csv  movie_info_idx.csv  movie_keyword.csv  movie_link.csv  name.csv  person_info.csv  role_type.csv  title.csv
job-query/: 13b.sql  test.sql
paper/1/: final_candle_stick.ipynb  info.txt
paper/2/: final_data.csv  final_workbook.ipynb  info.txt
paper/3/: info.txt  reward_comparison.ipynb  reward_comparison_max_20.csv
query-graph/: script.ipynb
query-graph/.ipynb_checkpoints/: script-checkpoint.ipynb
query-graph/profiling/: 10a.sql.json  10a.sql.json.html  10b.sql.json  10b.sql.json.html  10c.sql.json  10c.sql.json.html  11a.sql.json  11a.sql.json.html  11b.sql.json  11b.sql.json.html  11c.sql.json  11c.sql.json.html  11d.sql.json  11d.sql.json.html  12a.sql.json  12a.sql.json.html  12b.sql.json  12b.sql.json.html  12c.sql.json  12c.sql.json.html  13a.sql.json  13a.sql.json.html  13b.sql.json  13b.sql.json.html  13c.sql.json  13c.sql.json.html  13d.sql.json  13d.sql.json.html  14a.sql.json  14a.sql.json.html  14b.sql.json  14b.sql.json.html  14c.sql.json  14c.sql.json.html  15a.sql.json  15a.sql.json.html  15b.sql.json  15b.sql.json.html  15c.sql.json  15c.sql.json.html  (+186 more)
visualization/: script.ipynb
visualization/profiling/: .DS_Store.json  (+115 more)
(+2 files in other folders)
